# BGLTF

./: .gitignore  BeefProj.toml  README.md
Native/: CMakeLists.txt
Setup/: CMakeLists.txt
Setup/cgltf/: CMakeLists.txt
Setup/src/: Program.bf
src/: CGLTF.bf  Extensions.bf  Structs.bf
